<resources>
    <string name="app_name">ToDO Na Vespera</string>
    <string name="Titulo">Título</string>
    <string name="Descricao">Descrição</string>
    <string name="Data">Data</string>
    <string name="Local">Local</string>
    <string name="Realizado">Realizado</string>
    <string name="Prioridade">Prioridade</string>
    <string name="Alertar">Alertar</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="AnexarFoto">Anexar Foto</string>
    <string name="Salvar">Salvar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="MensagemInformarAlertar">Necessário informar Alertar - Sim ou Não</string>
    <string name="Confirmacao">Confirmação</string>
    <string name="MensagemConfirmacao">Deseja realmente salvar a tarefa?</string>
    <string name="TarefaSalvaSucesso">Tarefa salva com sucesso.</string>

    <string-array name="ListaPrioridades">
        <item>Selecione a Prioridade</item>
        <item>Baixa</item>
        <item>Normal</item>
        <item>Alta</item>
    </string-array>
</resources>